# Road-to-MLOps

./: .gitignore  README.md  prefect.yaml  pyproject.toml
.prefect/: flows.json
02-experiment-tracking/: taxi_trip_w1.ipynb
02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
03-credit/: prueba.py  prueba_2.py
03-orchestration/homework/: more_notes.md  readme.md
03-orchestration/homework/3.4/: orchestrate.py  orchestrate4.py  orchestrate5.py
notebooks/: taxi_trip_w1.ipynb
notes/: 01_Introduction.md
