[tool.poetry]
name = "MLOps-utilities"
version = "0.1.0"
description = "Repo for information about MLOps, specifically zoomcamp"
authors = ["macanoso <macanoso@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
ipykernel = "^6.23.1"
ipython = ">=8.0,<8.13"
mlflow = "^2.3.2"
hyperopt = "^0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
